changed to TableView experimenting with table creation and design

--- a/src/main/java/com/marquardt/expenseTracker/ui/overview/fxmlOverviewPage.fxml
+++ b/src/main/java/com/marquardt/expenseTracker/ui/overview/fxmlOverviewPage.fxml
@@ -38,8 +38,9 @@
 
 <Button text = "show" GridPane.columnIndex = "1" GridPane.rowIndex = "8" onMouseClicked="#show"/> 
 <!-- display section for result set -->
-<Text text = "Stored Expenses" GridPane.rowIndex="9" GridPane.columnIndex="0" GridPane.columnSpan="2" />
-<ListView fx:id="expenseView" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+<Text text = "Stored Expenses" GridPane.rowIndex="9" GridPane.columnIndex="0" />
+<TableView fx:id="expenseTable" GridPane.columnIndex="0" GridPane.rowIndex="10" GridPane.columnSpan="3" 
+prefWidth="300" prefHeight="200" editable="true" />
 
 
 </GridPane>
